--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(date_to_yymmdd)
 export(floor_date_wday)
 export(get_age_breaks)
 export(get_pop_by_breaks)
+export(my_date_labels)
 export(ra)
 export(read_data)
 export(source_echo)
