--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(floor_date_wday)
 export(get_age_breaks)
 export(get_pop_by_breaks)
 export(my_date_labels)
+export(my_date_labels_no_year)
 export(ra)
 export(read_data)
 export(source_echo)
